build_output.txt
   Compiling owo-colors v4.2.3
   Compiling tracing-error v0.2.1
   Compiling indenter v0.3.4
   Compiling rustc-demangle v0.1.26
   Compiling eyre v0.6.12
   Compiling backtrace v0.3.76
   Compiling color-spantrace v0.3.0
   Compiling color-eyre v0.6.5
   Compiling dotacord v0.0.0 (D:\dev\rust\dotacord)
warning: unused import: `clap::command`
 --> src\discord\discord_helper.rs:3:5
  |
3 | use clap::command;
  |     ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `serenity::futures::channel`
 --> src\discord\subscription_commands.rs:2:5
  |
2 | use serenity::futures::channel;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `serenity::model::event`
 --> src\scheduler\reload_task.rs:1:5
  |
1 | use serenity::model::event;
  |     ^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `info_span` and `span`
 --> src\scheduler\reload_task.rs:2:21
  |
2 | use tracing::{info, info_span, span};
  |                     ^^^^^^^^^  ^^^^

error[E0605]: non-primitive cast: `Box<std::io::Error>` as `ErrReport`
  --> src\database\database_access.rs:23:9
   |
23 | /         Box::new(std::io::Error::new(
24 | |             std::io::ErrorKind::AlreadyExists,
25 | |             "Database connection already initialized",
26 | |         )) as Error
   | |___________________^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object
   |
help: consider using the `From` trait instead
   |
23 ~         ErrReport::from(Box::new(std::io::Error::new(
24 |             std::io::ErrorKind::AlreadyExists,
25 |             "Database connection already initialized",
26 ~         )))
   |

error[E0605]: non-primitive cast: `Box<std::io::Error>` as `ErrReport`
  --> src\database\database_access.rs:35:9
   |
35 | /         Box::new(std::io::Error::new(
36 | |             std::io::ErrorKind::NotFound,
37 | |             "Database connection not initialized. Call init_database(...) at startup.",
38 | |         )) as Error
   | |___________________^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object
   |
help: consider using the `From` trait instead
   |
35 ~         ErrReport::from(Box::new(std::io::Error::new(
36 |             std::io::ErrorKind::NotFound,
37 |             "Database connection not initialized. Call init_database(...) at startup.",
38 ~         )))
   |

error[E0277]: the trait bound `std::string::String: StdError` is not satisfied
  --> src\discord\discord_helper.rs:24:20
   |
24 |         return Err(Error::from(err));
   |                    ^^^^^ the trait `StdError` is not implemented for `std::string::String`
   |
   = help: the trait `From<E>` is implemented for `ErrReport`
   = note: required for `ErrReport` to implement `From<std::string::String>`

error[E0277]: the trait bound `str: StdError` is not satisfied
  --> src\discord\discord_helper.rs:62:16
   |
62 |         .ok_or(Error::from("Could not get author"))?;
   |                ^^^^^ the trait `StdError` is not implemented for `str`
   |
   = help: the trait `From<E>` is implemented for `ErrReport`
   = note: required for `&str` to implement `StdError`
   = note: required for `ErrReport` to implement `From<&str>`

error[E0277]: the trait bound `str: StdError` is not satisfied
  --> src\discord\player_commands\list_players.rs:26:16
   |
26 |         .ok_or(Error::from("Failed to get author member"))?;
   |                ^^^^^ the trait `StdError` is not implemented for `str`
   |
   = help: the trait `From<E>` is implemented for `ErrReport`
   = note: required for `&str` to implement `StdError`
   = note: required for `ErrReport` to implement `From<&str>`

error[E0277]: the trait bound `str: StdError` is not satisfied
  --> src\discord\subscription_commands.rs:45:16
   |
45 |         .ok_or(Error::from("Could not get channel category information"))?;
   |                ^^^^^ the trait `StdError` is not implemented for `str`
   |
   = help: the trait `From<E>` is implemented for `ErrReport`
   = note: required for `&str` to implement `StdError`
   = note: required for `ErrReport` to implement `From<&str>`

error[E0277]: the trait bound `str: StdError` is not satisfied
   --> src\discord\subscription_commands.rs:178:24
    |
178 |         .ok_or_else(|| Error::from("Server not found in database"))
    |                        ^^^^^ the trait `StdError` is not implemented for `str`
    |
    = help: the trait `From<E>` is implemented for `ErrReport`
    = note: required for `&str` to implement `StdError`
    = note: required for `ErrReport` to implement `From<&str>`

